--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 						<h4 class="my-0 fw-normal">Custom</h4>
 					</div>
 					<div class="card-body">
-						<h1 class="card-title pricing-card-title">Let's negotiate.</small></h1>
+						<h1 class="card-title pricing-card-title blue-to-cyan-text">Let's talk.</small></h1>
 						<ul class="list-unstyled mt-3 mb-4">
 							<li><p class="mt-4">Amount of docs you want.</p></li>
 							<li><p>Unlimited users.</p></li>
