--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 					<div class="card-body">
 						<h1 class="card-title pricing-card-title">$10,000<small class="text-muted fw-light">/business</small></h1>
 						<ul class="list-unstyled mt-3 mb-4">
-							<li><p class="mt-4">Up to 40m documents.</p></li>
+							<li><p class="mt-4 sky-to-blue-text">Up to 40m documents.</p></li>
 							<li><p>Unlimited users.</p></li>
 							<li><p>VPN for restricting access to employees.</p></li>
 							<li><p class="mb-4">Unlimited VPN clients.</p></li>
