Improved separators for the features section.

--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@
 
 <br />
 <br />
-<div class="container px-4 py-5 border-bottom" id="features">
-	<h2 class="pb-2 border-bottom sky-to-blue-text">Features</h2>
+<div class="container px-4 py-5" id="features">
+	<h2 class="pb-2 sky-to-blue-text">Features</h2>
+	<hr />
 	<div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
 		<div class="col d-flex align-items-start">
 			<div class="icon-square bg-light text-dark flex-shrink-0 me-3 rounded mt-2">
@@ -115,6 +116,7 @@
 		</div>
 	</div>
 </div>
+<hr id="featuresToPricingSeparator"/>
 
 <div class="container horizontally-centered full-width">
 	<main id="pricing">
