--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 		</div>
 		<div class="row row-cols-1 row-cols-md-3 mb-3 text-center justify-content-center">
 			<div class="col">
-				<div class="card mb-4 rounded-3 shadow-sm border-primary dark-mode-pricing-card">
+				<div class="card mb-4 rounded-3 shadow-sm border-primary dark-mode-pricing-card" id="customPricing">
 					<div class="card-header py-3 text-white bg-primary border-primary">
 						<h4 class="my-0 fw-normal">Enterprise</h4>
 					</div>
