--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<meta name="keywords" content="edms, amoor, amooredms, electronic, document, management, system, electronic-document-management-system, electronic_document_management_system, documents, doc, docs, amoor-edms, amoor_edms, document-management, document_management, digital-document-storage, digital_document_storage, document-control-system, document_control_system, document-archiving, document_archiving, file-management-system, file_management_system, paperless-office, paperless_office, document-workflow, document_workflow, EDMS-software, EDMS_software, edms-software, edms_software, record-management-system, record_management_system">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-	<title>Title</title>
+	<title>AmoorEDMS</title>
+	<link rel="icon" type="image/x-icon" href="./assets/icons/logo.svg">
 	<link rel="stylesheet" href="./css/utils.css">
 	<link rel="stylesheet" href="./index.css">
 </head>
