Minor change, changed the 900k to 900,000 and did the same for the other pricing cards.

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 					<div class="card-body">
 						<h1 class="card-title pricing-card-title">$1000<small class="text-muted fw-light">/business</small></h1>
 						<ul class="list-unstyled mt-3 mb-4">
-							<li><p class="mt-4">Up to 900k documents.</p></li>
+							<li><p class="mt-4">Up to 900,000 documents.</p></li>
 							<li><p>Unlimited users.</p></li>
 							<li><p>VPN for restricting access to employees.</p></li>
 							<li><p class="mb-4">Unlimited VPN clients.</p></li>
@@ -151,7 +151,7 @@
 					<div class="card-body">
 						<h1 class="card-title pricing-card-title">$3000<small class="text-muted fw-light">/business</small></h1>
 						<ul class="list-unstyled mt-3 mb-4">
-							<li><p class="mt-4">Up to 20m documents.</p></li>
+							<li><p class="mt-4">Up to 20,000,000 documents.</p></li>
 							<li><p>Unlimited users.</p></li>
 							<li><p>VPN for restricting access to employees.</p></li>
 							<li><p class="mb-4">Unlimited VPN clients.</p></li>
@@ -170,7 +170,7 @@
 					<div class="card-body">
 						<h1 class="card-title pricing-card-title">$10,000<small class="text-muted fw-light">/business</small></h1>
 						<ul class="list-unstyled mt-3 mb-4">
-							<li><p class="mt-4 sky-to-blue-text">Up to 40m documents.</p></li>
+							<li><p class="mt-4 sky-to-blue-text">Up to 40,000,000 documents.</p></li>
 							<li><p>Unlimited users.</p></li>
 							<li><p>VPN for restricting access to employees.</p></li>
 							<li><p class="mb-4">Unlimited VPN clients.</p></li>
