--- a/ar/html/contact-us.html
+++ b/ar/html/contact-us.html
@@ -4,11 +4,12 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	<link href="../lib/bootstrap/bootstrap.min.css" rel="stylesheet">
+	<script src="../lib/bootstrap/bootstrap.min.js"></script>
 	<title>Title</title>
 	<link rel="stylesheet" href="../css/utils.css">
 	<link rel="stylesheet" href="../css/contact-us.css">
+	<script src="../js/translation.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-dark navbar-expand-lg sticky-top frosted-glass full-width">
@@ -50,5 +51,18 @@
 		</div>
 	</div>
 </div>
+
+<div class="container p-3 sticky-bottom">
+	<div class="dropdown dropup">
+		<button class="btn btn-secondary dropdown-toggle" type="button" id="langDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+			اللغة
+		</button>
+		<ul class="dropdown-menu" aria-labelledby="langDropdown">
+			<li><button class="dropdown-item" onclick="setLangAndTranslate(true)">عربي</button></li>
+			<li><button class="dropdown-item" onclick="setLangAndTranslate(false)">English</button></li>
+		</ul>
+	</div>
+</div>
+
 </body>
 </html>
