--- a/ar/index.html
+++ b/ar/index.html
@@ -1,52 +1,51 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="keywords" content="edms, amoor, amooredms, electronic, document, management, system, electronic-document-management-system, electronic_document_management_system, documents, doc, docs, amoor-edms, amoor_edms, document-management, document_management, digital-document-storage, digital_document_storage, document-control-system, document_control_system, document-archiving, document_archiving, file-management-system, file_management_system, paperless-office, paperless_office, document-workflow, document_workflow, EDMS-software, EDMS_software, edms-software, edms_software, record-management-system, record_management_system">
-	<link rel="stylesheet" href="./lib/bootstrap/bootstrap.min.css">
-	<script src="./lib/bootstrap/bootstrap.min.js"></script>
-	<title>AmoorEDMS</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	<title>أمور إي دي إم إس</title>
 	<link rel="icon" type="image/x-icon" href="./assets/icons/logo.svg">
 	<link rel="stylesheet" href="./css/utils.css">
 	<link rel="stylesheet" href="./index.css">
 </head>
 <body class="">
+
 <nav class="navbar navbar-dark navbar-expand-lg sticky-top frosted-glass full-width">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="#"><img src="./assets/icons/logo.svg" alt="AmoorEDMS" height="40"></a>
+		<a class="navbar-brand" href="#"><img src="./assets/icons/logo.svg" alt="أمور إي دي إم إس" height="40"></a>
 
-		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="تبديل التنقل"><span class="navbar-toggler-icon"></span></button>
 
 		<div class="collapse navbar-collapse navbar-supported-content" id="navbarSupportedContent">
 			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 				<li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="#">Home</a>
+					<a class="nav-link active" aria-current="page" href="#">الرئيسية</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="#footer">Contact Us</a>
+					<a class="nav-link active" aria-current="page" href="#footer">اتصل بنا</a>
 				</li>
 				<li class="nav-item">
-					<a href="#features" class="nav-link active" aria-current="page">Features</a>
+					<a href="#features" class="nav-link active" aria-current="page">الميزات</a>
 				</li>
 			</ul>
 
-			<a href="#pricing" class="btn btn-primary purchase" type="submit"><p style="text-wrap: nowrap;">Get Started</p></a>
+			<a href="#pricing" class="btn btn-primary purchase" type="submit"><p>ابدأ الآن</p></a>
 		</div>
 	</div>
 </nav>
 <br />
 <br />
 
-<main class="container">
-
 <div class="px-4 pt-5 my-5 text-center">
-	<h1 class="display-4 fw-bold sky-to-blue-text">AmoorEDMS</h1>
+	<h1 class="display-4 fw-bold sky-to-blue-text">أمور إي دي إم إس</h1>
 	<br />
 	<div class="col-lg-6 mx-auto">
-		<p class="lead mb-4">Advanced document management for businesses of all sizes.<br /><span class="blue-to-cyan-text">Manage less. Store more.</span><br /></p>
-		<a href="#pricing" class="btn btn-primary purchase mb-5" type="submit"><p>Get Started</p></a>
+		<p class="lead mb-4">إدارة المستندات المتقدمة للأعمال من جميع الأحجام.<br /><span class="blue-to-cyan-text">قلل الادارة. زِد التخزين.</span><br /></p>
+		<a href="#pricing" class="btn btn-primary purchase mb-5" type="submit"><p>ابدأ الآن</p></a>
 	</div>
 	<div class="overflow-hidden">
 		<div class="container px-5">
@@ -61,7 +60,7 @@
 
 				<button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
 					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					<span class="visually-hidden">Previous</span>
+					<span class="visually-hidden">السابق</span>
 				</button>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
@@ -76,7 +75,7 @@
 				</div>
 				<button class="carousel-control-next" type="button" data-bs-target="#heroCarousel" data-bs-slide="next">
 					<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					<span class="visually-hidden">Next</span>
+					<span class="visually-hidden">التالي</span>
 				</button>
 			</div>
 		</div>
@@ -87,34 +86,34 @@
 <br />
 <br />
 <div class="container px-4 py-5" id="features">
-	<h2 class="pb-2 sky-to-blue-text">Features</h2>
+	<h2 class="pb-2 sky-to-blue-text">الميزات</h2>
 	<hr />
 	<div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
-		<div class="col d-flex align-items-start" style="gap: 20px;">
-			<div class="icon-square bg-light text-dark flex-shrink-0 rounded mt-2">
+		<div class="col d-flex align-items-start">
+			<div class="icon-square bg-light text-dark flex-shrink-0 me-3 rounded mt-2">
 				<span class="bi bootstrap-icon features-icon">&#xF536;</span>
 			</div>
 			<div>
-				<h2 class="blue-to-cyan-text">Security. It's here.</h2>
-				<p>AmoorEDMS secures your documents by requiring special VPN clients for employee access to prevent unauthorized access to your documents.</p>
+				<h2 class="blue-to-cyan-text">الأمان. إنه هنا.</h2>
+				<p>أمور إي دي إم إس تحمي مستنداتك بتقديم <b>عميل VPN خاص</b> للوصول إلى الموظفين وتقديم <b>نظام نسخة محلية <span><a class="text-decoration-none" href="https://www.techtarget.com/searchdatabackup/definition/incremental-backup">النسخة الزائدة</a></span></b> للحفاظ على البيانات في حالة تفقد النسخة السحابية.</p>
 			</div>
 		</div>
-		<div class="col d-flex align-items-start" style="gap: 20px;">
-			<div class="icon-square bg-light text-dark flex-shrink-0 rounded mt-1">
+		<div class="col d-flex align-items-start">
+			<div class="icon-square bg-light text-dark flex-shrink-0 me-3 rounded mt-1">
 				<img src="./assets/icons/separation-of-concerns.svg" alt="" height="32">
 			</div>
 			<div>
-				<h2 class="sky-to-blue-text">Separation of Concerns</h2>
-				<p>AmoorEDMS provides great separation of concerns, users (aka employees) are separated into groups, and their permissions are inherited from their groups, so employees from one group do not have access to the work of another.</p>
+				<h2 class="sky-to-blue-text">فصل المسؤوليات</h2>
+				<p>أمور إي دي إم إس توفر أمور إي دي إم إس فصلاً رائعًا للمخاوف، حيث يتم فصل المستخدمين (أي الموظفين) إلى مجموعات، وتُورث أذوناتهم من مجموعاتهم، بحيث لا يتمكن الموظفون من مجموعة معينة من الوصول إلى عمل مجموعة أخرى.</p>
 			</div>
 		</div>
-		<div class="col d-flex align-items-start" style="gap: 20px;">
-			<div class="icon-square bg-light text-dark flex-shrink-0 rounded mt-1">
+		<div class="col d-flex align-items-start">
+			<div class="icon-square bg-light text-dark flex-shrink-0 me-3 rounded mt-1">
 				<span class="bi bootstrap-icon features-icon"> &#xF46C;</span>
 			</div>
 			<div>
-				<h2 class="blue-to-cyan-text">Lightning Fast Search</h2>
-				<p>AmoorEDMS offers lightning fast search functionality that is designed to be as user-friendly as possible, and also has a way to view documents in a tabular manner without the images for fast access.</p>
+				<h2 class="blue-to-cyan-text">بحث سريع كالبرق</h2>
+				<p>يقدم أمور إي دي إم إس وظيفة بحث سريعة كالبرق مصممة لتكون سهلة الاستخدام قدر الإمكان، وتوفر أيضًا طريقة لعرض المستندات في شكل جدولي دون الصور للوصول السريع.</p>
 			</div>
 		</div>
 	</div>
@@ -124,41 +123,41 @@
 <div class="container horizontally-centered full-width">
 	<main id="pricing">
 		<div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-			<h1 class="display-4 fw-normal blue-to-cyan-text">Price. Buy.</h1>
-			<p class="fs-5 text-muted">(All purchases are one-time.)</p>
+			<h1 class="display-4 fw-normal blue-to-cyan-text">السعر. اشتري.</h1>
+			<p class="fs-5 text-muted">جميع المشتريات لمرة واحدة.)</p>
 		</div>
 		<div class="row row-cols-1 row-cols-md-3 mb-3 text-center justify-content-center">
 			<div class="col">
 				<div class="card mb-4 rounded-3 shadow-sm dark-mode-pricing-card">
 					<div class="card-header py-3">
-						<h4 class="my-0 fw-normal">Basic</h4>
+						<h4 class="my-0 fw-normal">أساسي</h4>
 					</div>
 					<div class="card-body">
-						<h1 class="card-title pricing-card-title">$1000<small class="text-muted fw-light">/business</small></h1>
+						<h1 class="card-title pricing-card-title">1000 دولار<small class="text-muted fw-light">/شركة</small></h1>
 						<ul class="list-unstyled mt-3 mb-4">
-							<li><p class="mt-4">Up to 900,000 documents.</p></li>
-							<li><p>Unlimited users.</p></li>
-							<li><p>VPN for restricting access to employees.</p></li>
-							<li><p class="mb-4">Unlimited VPN clients.</p></li>
+							<li><p class="mt-4">حتى 900,000 مستند.</p></li>
+							<li><p>مستخدمون غير محدودين.</p></li>
+							<li><p>VPN لتقييد وصول الموظفين.</p></li>
+							<li><p class="mb-4">عملاء VPN غير محدودين.</p></li>
 						</ul>
-						<button type="button" class="w-100 btn btn-lg btn-outline-primary">Get Started</button>
+						<button type="button" class="w-100 btn btn-lg btn-outline-primary">ابدأ الآن</button>
 					</div>
 				</div>
 			</div>
 			<div class="col">
 				<div class="card mb-4 rounded-3 shadow-sm dark-mode-pricing-card" >
 					<div class="card-header py-3">
-						<h4 class="my-0 fw-normal">Pro</h4>
+						<h4 class="my-0 fw-normal">متقدم</h4>
 					</div>
 					<div class="card-body">
-						<h1 class="card-title pricing-card-title">$3000<small class="text-muted fw-light">/business</small></h1>
+						<h1 class="card-title pricing-card-title">3000 دولار<small class="text-muted fw-light">/شركة</small></h1>
 						<ul class="list-unstyled mt-3 mb-4">
-							<li><p class="mt-4">Up to 20,000,000 documents.</p></li>
-							<li><p>Unlimited users.</p></li>
-							<li><p>VPN for restricting access to employees.</p></li>
-							<li><p class="mb-4">Unlimited VPN clients.</p></li>
+							<li><p class="mt-4">حتى 20,000,000 مستند.</p></li>
+							<li><p>مستخدمون غير محدودين.</p></li>
+							<li><p>VPN لتقييد وصول الموظفين.</p></li>
+							<li><p class="mb-4">عملاء VPN غير محدودين.</p></li>
 						</ul>
-						<button type="button" class="w-100 btn btn-lg btn-primary">Get Started</button>
+						<button type="button" class="w-100 btn btn-lg btn-primary">ابدأ الآن</button>
 					</div>
 				</div>
 			</div>
@@ -167,42 +166,40 @@
 			<div class="col">
 				<div class="card mb-4 rounded-3 shadow-sm border-primary dark-mode-pricing-card" id="customPricing">
 					<div class="card-header py-3 text-white bg-primary border-primary">
-						<h4 class="my-0 fw-normal">Enterprise</h4>
+						<h4 class="my-0 fw-normal">مميز</h4>
 					</div>
 					<div class="card-body">
-						<h1 class="card-title pricing-card-title">$10,000<small class="text-muted fw-light">/business</small></h1>
+						<h1 class="card-title pricing-card-title">10,000 دولار<small class="text-muted fw-light">/شركة</small></h1>
 						<ul class="list-unstyled mt-3 mb-4">
-							<li><p class="mt-4 sky-to-blue-text">Up to 40,000,000 documents.</p></li>
-							<li><p>Unlimited users.</p></li>
-							<li><p>VPN for restricting access to employees.</p></li>
-							<li><p class="mb-4">Unlimited VPN clients.</p></li>
+							<li><p class="mt-4 sky-to-blue-text">حتى 40,000,000 مستند.</p></li>
+							<li><p>مستخدمون غير محدودين.</p></li>
+							<li><p>VPN لتقييد وصول الموظفين.</p></li>
+							<li><p class="mb-4">عملاء VPN غير محدودين.</p></li>
 						</ul>
-						<button type="button" class="w-100 btn btn-lg btn-primary">Get Started</button>
+						<button type="button" class="w-100 btn btn-lg btn-primary">ابدأ الآن</button>
 					</div>
 				</div>
 			</div>
 			<div class="col">
 				<div class="card mb-4 rounded-3 shadow-sm border-primary dark-mode-pricing-card">
 					<div class="card-header py-3 text-white bg-primary border-primary">
-						<h4 class="my-0 fw-normal">Custom</h4>
+						<h4 class="my-0 fw-normal">مخصص</h4>
 					</div>
 					<div class="card-body">
-						<h1 class="card-title pricing-card-title blue-to-cyan-text">Let's talk.</small></h1>
+						<h1 class="card-title pricing-card-title blue-to-cyan-text">دعونا نتحدث.</small></h1>
 						<ul class="list-unstyled mt-3 mb-4">
-							<li><p class="mt-4">Amount of docs you want.</p></li>
-							<li><p>Unlimited users.</p></li>
-							<li><p>VPN for restricting access to employees.</p></li>
-							<li><p class="mb-4">Unlimited VPN clients.</p></li>
+							<li><p class="mt-4">كمية المستندات التي تريدها.</p></li>
+							<li><p>مستخدمون غير محدودين.</p></li>
+							<li><p>VPN لتقييد وصول الموظفين.</p></li>
+							<li><p class="mb-4">عملاء VPN غير محدودين.</p></li>
 						</ul>
-						<button type="button" class="w-100 btn btn-lg btn-primary">Contact Us</button>
+						<button type="button" class="w-100 btn btn-lg btn-primary">اتصل بنا</button>
 					</div>
 				</div>
 			</div>
 		</div>
 	</main>
 </div>
-
-</main>
 
 <div class="mt-auto py-2 frosted-glass full-width footer" id="footer">
 	<div class="footer-content">
@@ -221,11 +218,11 @@
 <div class="container p-3 sticky-bottom">
 	<div class="dropdown dropup">
 		<button class="btn btn-secondary dropdown-toggle" type="button" id="langDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-			Language
+			اللغة
 		</button>
 		<ul class="dropdown-menu" aria-labelledby="langDropdown">
-			<li><a class="dropdown-item" href="./ar/index.html">عربي</a></li>
-			<li><button class="dropdown-item" href="./index.html">English</button></li>
+			<li><a class="dropdown-item" href="./index.html">عربي</a></li>
+			<li><button class="dropdown-item" href="../index.html">English</button></li>
 		</ul>
 	</div>
 </div>
