Fixed a minor bug and added fonts to the website.

--- a/ar/index.html
+++ b/ar/index.html
@@ -222,7 +222,7 @@
 		</button>
 		<ul class="dropdown-menu" aria-labelledby="langDropdown">
 			<li><a class="dropdown-item" href="./index.html">عربي</a></li>
-			<li><button class="dropdown-item" href="../index.html">English</button></li>
+			<li><a class="dropdown-item" href="../index.html">English</a></li>
 		</ul>
 	</div>
 </div>
