--- a/ar/index.html
+++ b/ar/index.html
@@ -124,7 +124,7 @@
 	<main id="pricing">
 		<div class="pricing-header p-3 pb-md-4 mx-auto text-center">
 			<h1 class="display-4 fw-normal blue-to-cyan-text">السعر. اشتري.</h1>
-			<p class="fs-5 text-muted">جميع المشتريات لمرة واحدة.)</p>
+			<p class="fs-5 text-muted">(جميع المشتريات لمرة واحدة.)</p>
 		</div>
 		<div class="row row-cols-1 row-cols-md-3 mb-3 text-center justify-content-center">
 			<div class="col">
