--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -32,14 +32,12 @@
 				</li>
 			</ul>
 
-			<a href="#pricing" class="btn btn-primary purchase" type="submit"><p style="text-wrap: nowrap;">Get Started</p></a>
+			<a href="#pricing" class="btn btn-primary purchase" type="submit"><p>Get Started</p></a>
 		</div>
 	</div>
 </nav>
 <br />
 <br />
-
-<main class="container">
 
 <div class="px-4 pt-5 my-5 text-center">
 	<h1 class="display-4 fw-bold sky-to-blue-text">AmoorEDMS</h1>
@@ -82,7 +80,7 @@
 		</div>
 	</div>
 </div>
-<hr>
+<hr />
 
 <br />
 <br />
@@ -90,7 +88,7 @@
 	<h2 class="pb-2 sky-to-blue-text">Features</h2>
 	<hr />
 	<div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
-		<div class="col d-flex align-items-start" style="gap: 20px;">
+		<div class="col d-flex align-items-start">
 			<div class="icon-square bg-light text-dark flex-shrink-0 rounded mt-2">
 				<span class="bi bootstrap-icon features-icon">&#xF536;</span>
 			</div>
@@ -99,7 +97,7 @@
 				<p>AmoorEDMS secures your documents by requiring special VPN clients for employee access to prevent unauthorized access to your documents.</p>
 			</div>
 		</div>
-		<div class="col d-flex align-items-start" style="gap: 20px;">
+		<div class="col d-flex align-items-start">
 			<div class="icon-square bg-light text-dark flex-shrink-0 rounded mt-1">
 				<img src="./assets/icons/separation-of-concerns.svg" alt="" height="32">
 			</div>
@@ -108,7 +106,7 @@
 				<p>AmoorEDMS provides great separation of concerns, users (aka employees) are separated into groups, and their permissions are inherited from their groups, so employees from one group do not have access to the work of another.</p>
 			</div>
 		</div>
-		<div class="col d-flex align-items-start" style="gap: 20px;">
+		<div class="col d-flex align-items-start" >
 			<div class="icon-square bg-light text-dark flex-shrink-0 rounded mt-1">
 				<span class="bi bootstrap-icon features-icon"> &#xF46C;</span>
 			</div>
@@ -201,8 +199,6 @@
 		</div>
 	</main>
 </div>
-
-</main>
 
 <div class="mt-auto py-2 frosted-glass full-width footer" id="footer">
 	<div class="footer-content">
