Minor changes and added explanation section.

--- a/index.html
+++ b/index.html
@@ -82,8 +82,15 @@
 </div>
 <hr />
 
+<div class="container px-4 py-5" id="explanation">
+	<h1 class="pb-2 blue-to-cyan-text text-center">How AmoorEDMS Works</h1>
+	<br />
+	<h5 class="text-center">AmoorEDMS stores your documents in a server remotely to make it easier to access for all employees in your business, instead of manually sending/Emailing documents to an employee or something similar, any employee can immediately go and access the documents they have permission to access.</h5>
+</div>
 <br />
 <br />
+<br />
+<hr id="explanationToFeaturesSeparator"/>
 <div class="container px-4 py-5" id="features">
 	<h2 class="pb-2 sky-to-blue-text">Features</h2>
 	<hr />
@@ -117,6 +124,8 @@
 		</div>
 	</div>
 </div>
+
+<br />
 <hr id="featuresToPricingSeparator"/>
 
 <div class="container horizontally-centered full-width">
@@ -203,8 +212,8 @@
 <div class="mt-auto py-2 frosted-glass full-width footer" id="footer">
 	<div class="footer-content">
 		<div class="footer-branding">
-			<a href="./index.html" class="vertically-centered"><img src="./assets/icons/logo.svg" alt="أمور إي دي إم إس" height="30" class="vertically-centered" /></a>
-			<p class="text-muted vertically-centered footer-text">© 2021 أمور إي دي إم إس، شركة</p>
+			<a href="./index.html" class="vertically-centered"><img src="./assets/icons/logo.svg" alt="AmoorEDMS" height="30" class="vertically-centered" /></a>
+			<p class="text-muted vertically-centered footer-text">© 2021 AmoorEDMS, Inc.</p>
 		</div>
 		<div class="footer-socials">
 			<a class="text-muted bi bootstrap-icon fs-3 social-media-icon" href="https://www.facebook.com/RickAstley/">&#xF344;</a>
