Fixed bug where some cards appear longer when you resize the screen to specific widths.

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 			<p class="fs-5 text-muted">(All purchases are one-time.)</p>
 		</div>
 		<div class="row row-cols-1 row-cols-md-3 mb-3 text-center justify-content-center">
-			<div class="col">
+			<div class="col-md-6 col-lg-6 col-xl-4 col-xxl-4">
 				<div class="card mb-4 rounded-3 shadow-sm dark-mode-pricing-card">
 					<div class="card-header py-3">
 						<h4 class="my-0 fw-normal">Basic</h4>
@@ -152,7 +152,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col">
+			<div class="col-md-6 col-lg-6 col-xl-4 col-xxl-4">
 				<div class="card mb-4 rounded-3 shadow-sm dark-mode-pricing-card" >
 					<div class="card-header py-3">
 						<h4 class="my-0 fw-normal">Pro</h4>
@@ -171,7 +171,7 @@
 			</div>
 		</div>
 		<div class="row row-cols-1 row-cols-md-3 mb-3 text-center justify-content-center">
-			<div class="col">
+			<div class="col-md-6 col-lg-6 col-xl-4 col-xxl-4">
 				<div class="card mb-4 rounded-3 shadow-sm border-primary dark-mode-pricing-card" id="customPricing">
 					<div class="card-header py-3 text-white bg-primary border-primary">
 						<h4 class="my-0 fw-normal">Enterprise</h4>
@@ -188,7 +188,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col">
+			<div class="col-md-6 col-lg-6 col-xl-4 col-xxl-4">
 				<div class="card mb-4 rounded-3 shadow-sm border-primary dark-mode-pricing-card">
 					<div class="card-header py-3 text-white bg-primary border-primary">
 						<h4 class="my-0 fw-normal">Custom</h4>
