Fixed bug where footer gets jumbled on small screen sizes.

--- a/index.html
+++ b/index.html
@@ -210,15 +210,19 @@
 </div>
 
 <div class="mt-auto py-2 frosted-glass full-width footer" id="footer">
-	<div class="footer-content">
-		<div class="footer-branding">
-			<a href="./index.html" class="vertically-centered"><img src="./assets/icons/logo.svg" alt="AmoorEDMS" height="30" class="vertically-centered" /></a>
-			<p class="text-muted vertically-centered footer-text">© 2021 AmoorEDMS, Inc.</p>
-		</div>
-		<div class="footer-socials">
-			<a class="text-muted bi bootstrap-icon fs-3 social-media-icon" href="https://www.facebook.com/RickAstley/">&#xF344;</a>
-			<a class="text-muted bi bootstrap-icon fs-3 social-media-icon" href="#">&#xF618;</a>
-			<a class="text-muted bi bootstrap-icon fs-3 social-media-icon" href="https://bit.ly/3UN1TmN">&#xF62B;</a>
+	<div class="container">
+		<div class="col">
+			<div class="footer-content">
+				<div class="footer-branding">
+					<a href="./index.html" class="vertically-centered"><img src="./assets/icons/logo.svg" alt="AmoorEDMS" height="30" class="vertically-centered" /></a>
+					<p class="text-muted vertically-centered footer-text">© 2021 AmoorEDMS, Inc.</p>
+				</div>
+				<div class="footer-socials">
+					<a class="text-muted bi bootstrap-icon fs-3 social-media-icon" href="https://www.facebook.com/RickAstley/">&#xF344;</a>
+					<a class="text-muted bi bootstrap-icon fs-3 social-media-icon" href="#">&#xF618;</a>
+					<a class="text-muted bi bootstrap-icon fs-3 social-media-icon" href="https://bit.ly/3UN1TmN">&#xF62B;</a>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
