Overhauled the hero section.

--- a/index.html
+++ b/index.html
@@ -39,45 +39,48 @@
 <br />
 <br />
 
-<div class="px-4 pt-5 my-5 text-center">
-	<h1 class="display-4 fw-bold sky-to-blue-text">AmoorEDMS</h1>
-	<br />
-	<div class="col-lg-6 mx-auto">
-		<p class="lead mb-4">Advanced document management for businesses of all sizes.<br /><span class="blue-to-cyan-text">Manage less. Store more.</span><br /></p>
-		<a href="#pricing" class="btn btn-primary purchase mb-5" type="submit"><p>Get Started</p></a>
-	</div>
-	<div class="overflow-hidden">
-		<div class="container px-5">
+<div class="mb-5 mt-3 text-center">
+	<div id="heroCarousel" class="carousel slide carousel-fade h-100" data-bs-ride="carousel">
+		<div class="carousel-indicators">
+			<button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+			<button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+			<button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+		</div>
 
-
-			<div id="heroCarousel" class="carousel slide" data-bs-ride="carousel">
-				<div class="carousel-indicators">
-					<button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-					<button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-					<button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+		<div class="carousel-inner h-100">
+			<div class="carousel-item active h-100">
+				<img src="./assets/images/Screenshot 2024-01-30 103237.png" class="img-fluid w-100 h-100 border rounded-3 shadow-lg mb-4" alt="Example" loading="lazy">
+				<div class="overlay-above-image d-flex gap-5 flex-column">
+					<h1>1</h1>
+					<h1>2</h1>
+					<h1>3</h1>
 				</div>
-
-				<button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
-					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					<span class="visually-hidden">Previous</span>
-				</button>
-				<div class="carousel-inner">
-					<div class="carousel-item active">
-						<img src="./assets/images/Screenshot 2024-02-10 112210.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example" height="400" loading="lazy">
-					</div>
-					<div class="carousel-item">
-						<img src="./assets/images/Screenshot 2024-02-10 112210.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example" height="400" loading="lazy">
-					</div>
-					<div class="carousel-item">
-						<img src="./assets/images/Screenshot 2024-02-10 112210.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example" height="400" loading="lazy">
-					</div>
+			</div>
+			<div class="carousel-item h-100">
+				<img src="./assets/images/Screenshot 2024-01-30 103649.png" class="img-fluid w-100 h-100 border rounded-3 shadow-lg mb-4" alt="Example" loading="lazy">
+				<div class="overlay-above-image d-flex gap-5 flex-column">
+					<h1>1</h1>
+					<h1>2</h1>
+					<h1>3</h1>
 				</div>
-				<button class="carousel-control-next" type="button" data-bs-target="#heroCarousel" data-bs-slide="next">
-					<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					<span class="visually-hidden">Next</span>
-				</button>
+			</div>
+			<div class="carousel-item h-100">
+				<img src="./assets/images/Screenshot 2024-02-10 112127.png" class="img-fluid w-100 h-100 border rounded-3 shadow-lg mb-4" alt="Example" loading="lazy">
+				<div class="overlay-above-image d-flex gap-5 flex-column">
+					<h1>1</h1>
+					<h1>2</h1>
+					<h1>3</h1>
+				</div>
 			</div>
 		</div>
+		<button class="carousel-control-prev"  type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
+			<span class="carousel-control-prev-icon dark-carousel-arrow" style="width: 40px; height: 40px;" aria-hidden="true"></span>
+			<span class="visually-hidden">Previous</span>
+		</button>
+		<button class="carousel-control-next" type="button" data-bs-target="#heroCarousel" data-bs-slide="next">
+			<span class="carousel-control-next-icon dark-carousel-arrow" aria-hidden="true"></span>
+			<span class="visually-hidden">Next</span>
+		</button>
 	</div>
 </div>
 <hr />
