--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 					<div class="card-body">
 						<h1 class="card-title pricing-card-title">$1000<small class="text-muted fw-light">/business</small></h1>
 						<ul class="list-unstyled mt-3 mb-4">
-							<li><p class="mt-4">Up to 900,000 documents.</p></li>
+							<li><p class="mt-4">Up to <span class="text-muted">900,000</span> documents.</p></li>
 							<li><p>Unlimited users.</p></li>
 							<li><p>VPN for restricting access to employees.</p></li>
 							<li><p class="mb-4">Unlimited VPN clients.</p></li>
