Replaced the trashy placeholders in the hero with placeholders stolen from https://morabaa.com/
Also removed the little carousel indicators in the hero.

--- a/index.html
+++ b/index.html
@@ -41,35 +41,19 @@
 
 <div class="mb-5 mt-3 text-center">
 	<div id="heroCarousel" class="carousel slide carousel-fade h-100" data-bs-ride="carousel">
-		<div class="carousel-indicators">
-			<button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-			<button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-			<button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-		</div>
-
 		<div class="carousel-inner h-100">
 			<div class="carousel-item active h-100">
-				<img src="./assets/images/Screenshot 2024-01-30 103237.png" class="img-fluid w-100 h-100 border rounded-3 shadow-lg mb-4" alt="Example" loading="lazy">
-				<div class="overlay-above-image d-flex gap-5 flex-column">
-					<h1>1</h1>
-					<h1>2</h1>
-					<h1>3</h1>
+				<img src="./assets/images/estore-head-bg.jpg" class="img-fluid w-100 h-100 border rounded-3 shadow-lg mb-4" alt="Example" loading="lazy">
+				<div class="overlay-above-image d-flex gap-5 flex-column align-items-center justify-content-center">
+					<img class="mb-5" src="./assets/images/itesReady.png" alt="صار جاهز" height="175"/>
+					<img class="mt-5" src="./assets/images/estore-head-devices.webp" alt="fsdfsdf" height="600">
 				</div>
 			</div>
 			<div class="carousel-item h-100">
-				<img src="./assets/images/Screenshot 2024-01-30 103649.png" class="img-fluid w-100 h-100 border rounded-3 shadow-lg mb-4" alt="Example" loading="lazy">
-				<div class="overlay-above-image d-flex gap-5 flex-column">
-					<h1>1</h1>
-					<h1>2</h1>
-					<h1>3</h1>
-				</div>
-			</div>
-			<div class="carousel-item h-100">
-				<img src="./assets/images/Screenshot 2024-02-10 112127.png" class="img-fluid w-100 h-100 border rounded-3 shadow-lg mb-4" alt="Example" loading="lazy">
-				<div class="overlay-above-image d-flex gap-5 flex-column">
-					<h1>1</h1>
-					<h1>2</h1>
-					<h1>3</h1>
+				<img src="./assets/images/sales-bg.jpg" class="img-fluid w-100 h-100 border rounded-3 shadow-lg mb-4" alt="Example" loading="lazy">
+				<div class="overlay-above-image d-flex gap-5 flex-column align-items-center justify-content-center">
+					<img class="mb-5" src="./assets/images/sales-text.png" alt="صار جاهز" height="165"/>
+					<img class="mt-5" src="./assets/images/devices-sales.webp" alt="fsdfsdf" height="600">
 				</div>
 			</div>
 		</div>
