--- a/index.html
+++ b/index.html
@@ -42,18 +42,18 @@
 <div class="mb-5 mt-3 text-center">
 	<div id="heroCarousel" class="carousel slide carousel-fade h-100" data-bs-ride="carousel">
 		<div class="carousel-inner h-100">
-			<div class="carousel-item active h-100">
+			<div class="carousel-item active h-100" id="heroCarouselItem1">
 				<img src="./assets/images/estore-head-bg.jpg" class="img-fluid w-100 h-100 border rounded-3 shadow-lg mb-4" alt="Example" loading="lazy">
-				<div class="overlay-above-image d-flex gap-5 flex-column align-items-center justify-content-center">
-					<img class="mb-5" src="./assets/images/itesReady.png" alt="صار جاهز" height="175"/>
-					<img class="mt-5" src="./assets/images/estore-head-devices.webp" alt="fsdfsdf" height="600">
+				<div class="overlay-above-image d-flex flex-column align-items-center">
+					<img class="mb-5" src="./assets/images/itesReady.png" alt="صار جاهز"/>
+					<img class="mt-5" src="./assets/images/estore-head-devices.webp" alt="fsdfsdf">
 				</div>
 			</div>
-			<div class="carousel-item h-100">
+			<div class="carousel-item h-100" id="heroCarouselItem2">
 				<img src="./assets/images/sales-bg.jpg" class="img-fluid w-100 h-100 border rounded-3 shadow-lg mb-4" alt="Example" loading="lazy">
-				<div class="overlay-above-image d-flex gap-5 flex-column align-items-center justify-content-center">
-					<img class="mb-5" src="./assets/images/sales-text.png" alt="صار جاهز" height="165"/>
-					<img class="mt-5" src="./assets/images/devices-sales.webp" alt="fsdfsdf" height="600">
+				<div class="overlay-above-image d-flex flex-column align-items-center justify-content-center">
+					<img class="mb-5" src="./assets/images/sales-text.png" alt="صار جاهز"/>
+					<img class="mt-5" src="./assets/images/devices-sales.webp" alt="fsdfsdf">
 				</div>
 			</div>
 		</div>
